@@ -1,3 +1,5 @@
+- urpmi:
+  o do not print orphans message when no package is orphan
 - kill mdv reference in man pages (#5277)
 
 Version 6.48 - 26 March 2012
